--- a/app/views/customerquotes/index.html.erb
+++ b/app/views/customerquotes/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= customerquote.name %></td>
         <td><%= customerquote.date %></td>
         <td><%= customerquote.amount %></td>
-        <td><%= customerquote.cost_center.number %></td>
+        <td><%= customerquote.cost_center %></td>
         <td><%= link_to 'Show', customerquote %></td>
         <td><%= link_to 'Edit', edit_customerquote_path(customerquote) %></td>
         <td><%= link_to 'Destroy', customerquote, method: :delete, data: { confirm: 'Are you sure?' } %></td>
