--- a/app/views/customerquotes/show.html.erb
+++ b/app/views/customerquotes/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice%></p>
+<p id="notice"><%= notice %></p>
+
 <p>
   <strong>Name:</strong>
   <%= @customerquote.name %>
@@ -16,18 +17,8 @@
 
 <p>
   <strong>Cost center:</strong>
-  <%#= @customerquote.cost_center.number %>
-  <%= link_to CostCenter.find(@customerquote.cost_center_id).number, cost_center_path(@customerquote.cost_center_id) %>
+  <%= @customerquote.cost_center %>
 </p>
 
 <%= link_to 'Edit', edit_customerquote_path(@customerquote) %> |
 <%= link_to 'Back', customerquotes_path %>
-
-
-<h4> Customer POs</h4>
-<%= link_to 'New Customer PO', new_customerpo_path %><br>
-<% @customerquote.customerpos.each do |customerpo| %>
-	<%= customerpo.id %>
-	<%= link_to customerpo.number, customerpo_path(customerpo) %>
-	<%= customerpo.date %><br>
-<% end %>
