--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -1,18 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Type:</strong>
+  <strong>Milestone type:</strong>
   <%= @milestone.milestone_type %>
 </p>
 
 <p>
   <strong>Stage:</strong>
   <%= @milestone.stage %>
-</p>
-
-<p>
-  <strong>Customerpo:</strong>
-  <%= @milestone.customerpo.number %>
 </p>
 
 <%= link_to 'Edit', edit_milestone_path(@milestone) %> |
