--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -8,10 +8,11 @@
       <th>Name</th>
       <th>Number</th>
       <th>Tower height</th>
-      <th>Town</th>
       <th>Status</th>
       <th>Scope</th>
+      <th>Town</th>
       <th>Customerpo</th>
+      <th>Region</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,10 +23,11 @@
         <td><%= site.name %></td>
         <td><%= site.number %></td>
         <td><%= site.tower_height %></td>
-        <td><%= site.town.name %></td>
-        <td><%= site.status.state %></td>
-        <td><%= site.scope.scope_type %></td>
-        <td><%= site.customerpo.number %></td>
+        <td><%= site.status %></td>
+        <td><%= site.scope %></td>
+        <td><%= site.town %></td>
+        <td><%= site.customerpo %></td>
+        <td><%= site.region %></td>
         <td><%= link_to 'Show', site %></td>
         <td><%= link_to 'Edit', edit_site_path(site) %></td>
         <td><%= link_to 'Destroy', site, method: :delete, data: { confirm: 'Are you sure?' } %></td>
