--- a/app/views/customerpos/index.html.erb
+++ b/app/views/customerpos/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Date</th>
       <th>Number</th>
+      <th>Date</th>
       <th>Amount</th>
       <th>Customerquote</th>
       <th colspan="3"></th>
@@ -16,10 +16,10 @@
   <tbody>
     <% @customerpos.each do |customerpo| %>
       <tr>
-        <td><%= customerpo.date %></td>
         <td><%= customerpo.number %></td>
+        <td><%= customerpo.date %></td>
         <td><%= customerpo.amount %></td>
-        <td><%= customerpo.customerquote.name %></td>
+        <td><%= customerpo.customerquote %></td>
         <td><%= link_to 'Show', customerpo %></td>
         <td><%= link_to 'Edit', edit_customerpo_path(customerpo) %></td>
         <td><%= link_to 'Destroy', customerpo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
