--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -5,11 +5,11 @@
 <table>
   <thead>
     <tr>
-      <th>Date</th>
       <th>Number</th>
+      <th>Date</th>
       <th>Amount</th>
       <th>Status</th>
-      <th>Milestone</th>
+      <th>Scope</th>
       <th>Customerpo</th>
       <th colspan="3"></th>
     </tr>
@@ -18,12 +18,12 @@
   <tbody>
     <% @invoices.each do |invoice| %>
       <tr>
-        <td><%= invoice.date %></td>
         <td><%= invoice.number %></td>
+        <td><%= invoice.date %></td>
         <td><%= invoice.amount %></td>
-        <td><%= invoice.status.state %></td>
-        <td><%= invoice.milestone.milestone_type %></td>
-        <td><%= invoice.customerpo.number %></td>
+        <td><%= invoice.status %></td>
+        <td><%= invoice.scope %></td>
+        <td><%= invoice.customerpo %></td>
         <td><%= link_to 'Show', invoice %></td>
         <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
         <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
