--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -5,9 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Type</th>
+      <th>Milestone type</th>
       <th>Stage</th>
-      <th>Customerpo</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +16,6 @@
       <tr>
         <td><%= milestone.milestone_type %></td>
         <td><%= milestone.stage %></td>
-        <td><%= milestone.customerpo.number %></td>
         <td><%= link_to 'Show', milestone %></td>
         <td><%= link_to 'Edit', edit_milestone_path(milestone) %></td>
         <td><%= link_to 'Destroy', milestone, method: :delete, data: { confirm: 'Are you sure?' } %></td>
