--- a/app/views/scopes/show.html.erb
+++ b/app/views/scopes/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Type:</strong>
+  <strong>Scope type:</strong>
   <%= @scope.scope_type %>
 </p>
 
