--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -26,44 +26,29 @@
     <%= f.number_field :tower_height %>
   </div>
 
- <!--  <div class="field">
-    <%#= f.label :town_id %>
-    <%#= f.text_field :town_id %>
-  </div> -->
-
-  <!-- <div class="field">
-    <%#= f.label :status_id %>
-    <%#= f.text_field :status_id %>
-  </div> -->
-
-  <!-- <div class="field">
-    <%#= f.label :scope_id %>
-    <%#= f.text_field :scope_id %>
-  </div -->
-
-  <!-- <div class="field">
-    <%#= f.label :customerpo_id %>
-    <%#= f.text_field :customerpo_id %>
-  </div> -->
-
   <div class="field">
-    <%= f.label :scope_id %>
-    <%= f.collection_select :scope_id, Scope.all, :id, :scope_type %>
+    <%= f.label :status_id %>
+    <%= f.text_field :status_id %>
   </div>
 
   <div class="field">
-    <%= f.label :status_id %>
-    <%= f.collection_select :status_id, Status.all, :id, :state %>
+    <%= f.label :scope_id %>
+    <%= f.text_field :scope_id %>
   </div>
 
   <div class="field">
     <%= f.label :town_id %>
-    <%= f.collection_select :town_id, Town.all, :id, :name %>
+    <%= f.text_field :town_id %>
   </div>
 
   <div class="field">
     <%= f.label :customerpo_id %>
-    <%= f.collection_select :customerpo_id, Customerpo.all, :id, :number %>
+    <%= f.text_field :customerpo_id %>
+  </div>
+
+  <div class="field">
+    <%= f.label :region_id %>
+    <%= f.text_field :region_id %>
   </div>
 
   <div class="actions">
