--- a/app/views/towns/show.html.erb
+++ b/app/views/towns/show.html.erb
@@ -10,5 +10,10 @@
   <%= @town.classification %>
 </p>
 
+<p>
+  <strong>Region:</strong>
+  <%= link_to @town.region.name, region_path(@town.region_id) %>
+</p>
+
 <%= link_to 'Edit', edit_town_path(@town) %> |
 <%= link_to 'Back', towns_path %>
